# aip

./: .flake8  .gitignore  .svu.yaml  ADMIN.md  CLAUDE.md  CONFIGURATION.md  Cargo.toml  Dockerfile  LICENSE  METRICS_MIGRATION_GUIDE.md  README.md  RELEASE.md  alembic.ini  build.rs  docker-compose.yml  entrypoint.sh  flake.nix  init.sh  pyproject.toml  signing_keys.json  telegraf.conf
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh  postgres_init.sql  telegraf.conf
.github/workflows/: build.yaml  build_aip.yaml  build_and_deploy.yaml  ci.yaml  lint.yaml  release.yaml  scan.yaml
alembic/: env.py
alembic/versions/: 380b77abd479_init.py
deploy/: README.md
deploy/aip/: Pulumi.dev.yaml  Pulumi.main.yaml  Pulumi.yaml  __main__.py  pyproject.toml  signing_keys.json
deploy/aip/src/service/: aip.py
deploy/aip/src/utils/: provider.py
examples/device-flow-cli/: Cargo.toml  README.md  register-client.sh
examples/device-flow-cli/src/: main.rs
examples/dpop-website/: Cargo.toml  README.md
examples/dpop-website/src/: main.rs
examples/flask-website/: client_secrets.example.json  main.py  requirements.txt
examples/lifecycle-website/: Cargo.toml  README.md
examples/lifecycle-website/src/: main.rs
examples/private-key-jwt/: .gitignore  README.md  create_private_key_jwt_client.sh  test_private_key_jwt.sh
examples/react-website/: .env.example  .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/react-website/server/: dpop-test.ts  dpop.ts  index.ts  tsconfig.json  types.ts
examples/react-website/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
examples/react-website/src/components/: OAuthCallback.tsx  OAuthDemo.tsx
examples/react-website/src/hooks/: useOAuth.ts
examples/react-website/src/types/: oauth.ts
examples/react-website/src/utils/: api.ts  oauth.ts
examples/simple-website/: Cargo.toml  README.md
examples/simple-website/src/: main.rs
migrations/: README.md
migrations/postgres/: 001_initial_schema.sql  002_add_nonce_to_authorization_codes.sql  003_add_nonce_to_access_refresh_tokens.sql  004_create_app_password_tables.sql  005_add_token_expiration_to_oauth_clients.sql  006_add_require_redirect_exact_to_oauth_clients.sql  008_alter_token_expiration_to_bigint.sql  009_refactor_sessions_and_requests.sql  010_allow_null_did_in_atp_oauth_sessions.sql  011_add_jwks_to_oauth_clients.sql  012_add_client_metadata_fields.sql  013_create_device_codes.sql
migrations/sqlite/: 001_create_oauth_clients.sql  002_create_authorization_codes.sql  003_create_access_tokens.sql  004_create_refresh_tokens.sql  005_create_keys.sql  006_create_par_requests.sql  007_create_atp_oauth_sessions.sql  008_create_authorization_requests.sql  009_add_nonce_to_authorization_codes.sql  010_add_nonce_to_access_refresh_tokens.sql  011_create_app_passwords.sql  012_create_app_password_sessions.sql  013_add_token_expiration_to_oauth_clients.sql  014_add_require_redirect_exact_to_oauth_clients.sql  015_add_registration_access_token_to_oauth_clients.sql  016_refactor_atp_oauth_sessions_primary_key.sql  017_create_oauth_requests.sql  018_add_metadata_to_atp_oauth_sessions.sql  019_allow_null_did_in_atp_oauth_sessions.sql  020_add_jwks_to_oauth_clients.sql  021_remove_did_from_oauth_requests.sql  023_add_client_metadata_fields.sql
scripts/: test-postgres.sh
src/: config.rs  errors.rs  lib.rs  templates.rs
src/http/: context.rs  handler_app_password.rs  handler_atprotocol_client_metadata.rs  handler_atprotocol_oauth_authorize.rs  handler_atprotocol_oauth_callback.rs  handler_atprotocol_session.rs  handler_device_authorization.rs  handler_device_code.rs  handler_hello_api.rs  handler_index.rs  handler_oauth.rs  handler_oauth_clients.rs  handler_par.rs  handler_userinfo.rs  handler_well_known.rs  handler_xrpc_clients.rs  middleware_auth.rs  mod.rs  server.rs  utils_atprotocol_oauth.rs  utils_oauth.rs
src/oauth/: atprotocol_bridge.rs  auth_server.rs  dpop.rs  dpop_nonce.rs  mod.rs  openid.rs  resource_server.rs  scope_validation.rs  time_tests.rs  types.rs  utils_app_password.rs  utils_atprotocol_oauth.rs
src/oauth/clients/: mod.rs  registration.rs
src/social/graze/aip/: __init__.py
src/social/graze/aip/app/: __init__.py  __main__.py  cli.py  config.py  cors.py  metrics.py  server.py  tasks.py
src/social/graze/aip/app/handlers/: app_password.py  credentials.py  helpers.py  internal.py  oauth.py  permissions.py  proxy.py
src/social/graze/aip/app/util/: __main__.py
src/social/graze/aip/atproto/: __init__.py  app_password.py  chain.py  dpop.py  jwt.py  oauth.py  pds.py
src/social/graze/aip/model/: __init__.py  app_password.py  base.py  handles.py  health.py  oauth.py
src/social/graze/aip/resolve/: __init__.py  __main__.py  handle.py
src/storage/: key_provider.rs  mod.rs  traits.rs
src/storage/inmemory/: atprotocol.rs  mod.rs  nonce.rs  oauth.rs
src/storage/postgres/: access_tokens.rs  app_passwords.rs  atp_oauth_sessions.rs  authorization_codes.rs  authorization_requests.rs  device_codes.rs  did_documents.rs  keys.rs  mod.rs  oauth_clients.rs  oauth_request_storage.rs  par_requests.rs  refresh_tokens.rs
src/storage/sqlite/: access_tokens.rs  app_passwords.rs  atp_oauth_sessions.rs  authorization_codes.rs  authorization_requests.rs  device_codes.rs  keys.rs  mod.rs  oauth_clients.rs  oauth_request_storage.rs  par_requests.rs  refresh_tokens.rs
static/: humans.txt  login.css  robots.txt
templates/: atproto_debug.html  atproto_login.html  base.html  device.html  device_success.html  identity.html  index.html  login.html  nav.html  settings.html
tests/: conftest.py  oauth_integration.rs  test_atproto_chain.py  test_atproto_jwt.py  test_example.py  test_helpers.py  test_metrics_abstraction.py  test_model_app_password.py  test_model_handles.py  test_model_oauth.py  test_queue_manager.py  test_queue_manager_integration.py  test_resolve_handle.py
