[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "aip"
version = "0.1.0"
description = "ATmosphere Authentication, Identity, and Permission Proxy"
requires-python = ">=3.13"

license = { file = "LICENSE" }

authors = [
    { name = "Nick Gerakines", email = "nick.gerakines@gmail.com" },
]
maintainers = [{ name = "Nick Gerakines", email = "nick.gerakines@gmail.com" }]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13"
]

dependencies = [
    "sqlalchemy>=2.0.37",
    "aioredis>=2.0.1",
    "pydantic>=2.10.6",
    "aiohttp>=3.11.11",
    "jinja2>=3.1.5",
    "aiohttp-jinja2>=1.6",
    "alembic>=1.14.1",
    "psycopg2>=2.9.10",
    "jwcrypto>=1.5.6",
    "pydantic-settings>=2.7.1",
    "python-json-logger>=3.2.1",
    "aiodns>=3.2.0",
    "asyncpg>=0.30.0",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "flake8>=7.1.1",
    "pytest>=8.3.4",
    "black>=25.1.0",
]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/graze-social/aip"
"Bug Reports" = "https://github.com/graze-social/aip/issues"
"Source" = "https://github.com/graze-social/aip"

[project.scripts]
aipserver = "social.graze.aip.app.cli:invoke"
resolve = "social.graze.aip.resolve.__main__:main"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/social", "LICENSE"]

[tool.pytest.ini_options]
pythonpath = [
  "src/"
]
