[package]
name = "device-flow-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI example demonstrating OAuth 2.0 Device Authorization Grant (RFC 8628) with AIP"

[[bin]]
name = "device-flow-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }