[package]
name = "lifecycle-website"
version = "0.1.0"
edition = "2021"
description = "A web application that demonstrates ATProtocol lifecycle management with DPoP authentication"

[[bin]]
name = "lifecycle-website"
path = "src/main.rs"

[dependencies]
# ATProtocol dependencies - Update paths as needed for your setup
atproto-client = { path = "/Users/nick/development/tangled.sh/smokesignal.events/atproto-identity-rs/crates/atproto-client" }
atproto-identity = { path = "/Users/nick/development/tangled.sh/smokesignal.events/atproto-identity-rs/crates/atproto-identity" }
atproto-oauth = { path = "/Users/nick/development/tangled.sh/smokesignal.events/atproto-identity-rs/crates/atproto-oauth" }

# Web framework
axum = { version = "0.8" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.41", features = ["macros", "rt", "rt-multi-thread", "net", "sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography and encoding
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"

# URL handling
urlencoding = "2.1"
html-escape = "0.2"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }